# nolog-plain

./: Cargo.toml  README.md
examples/: base.rs  to-file-debug-plus-release.rs  to-file.rs  to-stderr.rs
examples/as-dep-to-file/: Cargo.toml
examples/as-dep-to-file/src/: logger.rs
src/: lib.rs
